# yarr

./: .gitignore  .prettierignore  .yarr.yml  CLAUDE.md  Cargo.toml  LICENSE  README.md  design_system.md  eslint.config.js  index.html  initial-thoughts.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/: dependabot.yml
e2e/: ansi-colors.test.ts  auto-fetch-toggle.test.ts  branch-display.test.ts  breadcrumbs.test.ts  checks.test.ts  config-source-badges.test.ts  effort-level.test.ts  export-yarr-config.test.ts  fixtures.ts  git-sync.test.ts  history.test.ts  home.test.ts  oneshot.test.ts  remove-repo.test.ts  repo-detail-git-status.test.ts  repo-history.test.ts  run-detail.test.ts  session-lifecycle.test.ts  ssh-repo.test.ts  sub-agent-context.test.ts  update.test.ts  yarr-config-banner.test.ts
src/: App.svelte  App.test.tsx  App.tsx  Breadcrumbs.svelte  EventsList.svelte  HistoryView.svelte  HomeView.svelte  IterationGroup.svelte  OneShotView.svelte  OneShotView.test.ts  PlanPanel.test.tsx  PlanPanel.tsx  RepoCard.svelte  RepoCard.test.ts  RepoDetail.svelte  RepoDetail.test.ts  RunDetail.svelte  browser-mock.ts  config.test.ts  config.ts  context-bar.test.ts  context-bar.ts  event-display.test.ts  event-display.ts  (+32 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git_merge.rs  lib.rs  main.rs  oneshot.rs  output.rs  prompt.rs  session.rs  ssh_orchestrator.rs  trace.rs  yarr_config.rs
src-tauri/src/runtime/: local.rs  mock.rs  mod.rs  shell_env.rs  ssh.rs  wsl.rs
src-tauri/traces/: trace_ca95341b_20260306_212039.json
(+135 files in other folders)
