[package]
name = "yarr"
version = "0.1.0"
edition = "2021"
description = "Yet Another Ralph Reigns"

[lib]
name = "yarr_lib"
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
async-trait = "0.1"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
